--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "chai": "^4.3.6",
+    "esbuild": "^0.14.49",
     "esm": "^3.2.25",
     "mocha": "^10.0.0",
     "typescript": "^4.7.4"
