--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cross-dirname",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "type": "commonjs",
   "main": "./dist/cjs/index.cjs",
   "module": "./dist/esm/index.mjs",
@@ -20,10 +20,13 @@
     "build:cjs": "tsc && mv ./dist/cjs/index.js ./dist/cjs/index.cjs",
     "build:esm": "tsc --project tsconfig.esm.json && mv ./dist/esm/index.js ./dist/esm/index.mjs",
     "build:types": "tsc --project tsconfig.types.json",
-    "test": "npm run test:node && npm run test:deno && npm run test:gjs",
+    "test": "npm run test:node && npm run test:deno && npm run test:gjs && npm run test:browser",
     "test:node": "mocha test/node",
-    "test:gjs": "gjs -m ./test/gjs/dirname.test.mjs",
-    "test:deno": "deno test ./test/deno/dirname.test.mjs"
+    "test:gjs": "node test/browser/esbuild.mjs && gjs -m ./test/gjs/dirname.test.mjs",
+    "test:deno": "deno test ./test/deno/dirname.test.mjs",
+    "test:browser": "npm run test:browser:esm && npm run test:browser:cjs",
+    "test:browser:esm": "node test/browser/esbuild.mjs && mocha-headless-chrome -t 120000 -f ./test/browser/index.html",
+    "test:browser:cjs": "node test/browser/esbuild.cjs && mocha-headless-chrome -t 120000 -f ./test/browser/index.html"
   },
   "keywords": [
     "dirname",
@@ -42,10 +45,11 @@
   },
   "devDependencies": {
     "chai": "^4.3.6",
-    "cross-dirname": "^0.0.5",
+    "cross-dirname": "^0.0.6",
     "esbuild": "^0.14.49",
     "esm": "^3.2.25",
     "mocha": "^10.0.0",
+    "mocha-headless-chrome": "^4.0.0",
     "typescript": "^4.7.4"
   }
 }
