--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -1,8 +1,11 @@
 {
     "extends": "./tsconfig.json",
     "compilerOptions": {
-      "outDir": "./dist/esm",
-      "module": "ESNext"
+      "outDir": "./dist/esm-bug",
+      "module": "ESNext",
+      "moduleResolution": "nodenext",
+      "rootDir": "."
     },
-    "references": []
+    "references": [],
+    "include": ["bug"]
   }
